SERVER-67722 Add special handling for MaxTimeMSExpired in shard cursor lifecycle